--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 env
 Metrics
 .DS_Store
+Catalogue.ipynb
+mock-data/S2-mock-catalogue-noerr.csv
+mock-data/S2-mock-catalogue-sch.csv
+mock-data/S2-mock-catalogue-sch-new.csv
